# astral

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md
resources/: display_config.ron
src/: CMakeLists.txt  main.rs
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/graphic/: CMakeLists.txt  CrossDrawable.cpp  CrossDrawable.h  Drawer.cpp  Drawer.h  WindowDisplay.cpp  WindowDisplay.h  entrypoint.cpp  entrypoint.h  main.cpp  main_win32.cpp
src/gui/: CMakeLists.txt  Drawer.h  IDrawable.h  Makefile  WindowDisplay.cpp  WindowDisplay.h  common_main.cpp  common_main.hpp  event_handler.hpp  main.cpp  main_win32.cpp
src/logic/: CMakeLists.txt  Chronometer.cpp  Chronometer.h  IChronometer.h  ILoopStopper.h  IStepper.h  IStepperRegistrar.h  Looper.cpp  Looper.h  Makefile  Mover.cpp  Mover.h  Position.h  StepDispenser.cpp  StepDispenser.h  Units.h  Vector.cpp  Vector.h
src/logic/test/: CMakeLists.txt  ChronometerTest.cpp  LooperTest.cpp  MockChronometer.h  MockLoopStopper.h  MockStepper.h  MockStepperRegistrar.h  MoverTest.cpp  StepDispenserTest.cpp  VectorTest.cpp
src/logic_test/: .gitignore  CMakeLists.txt  ChronometerTest.cpp  LooperTest.cpp  Makefile  MockChronometer.h  MockLoopStopper.h  MockStepper.h  MockStepperRegistrar.h  MoverTest.cpp  StepDispenserTest.cpp  VectorTest.cpp  config.cpp  config.h
src/toolkit/: CMakeLists.txt  expected.hpp  non_copyable.hpp
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt  test_engine.cpp
tests/toolkit/: CMakeLists.txt  test_expected.cpp
